GeneWeb version 2.05
--------------------

* Setup program
  - [Jul 2, 99] Fixed bug: importing GeneWeb base from old version passing
    by a GEDCOM file did not work if the current directory held spaces.
  - [Jul 2, 99] Changed names of html files to hold 8 characters maximum
    and 3 characters for the extension, to be unzippable by "pkunzip".

* GeneWeb Daemon/CGI (gwd)
  - [Jul 14, 99] Added system of grammar declinations (required by German,
    Esperanto, Czech).
  - [Jul 9, 99] Added link (upper arrow) to welcome page in displayings by
    first names and surnames.
  - [Jul 9, 99] Fixed date check for possible father when interval (i.e. was
    telling "incorrect" when father died between 1250 and 1260 and son born
    in 1255).
  - [Jul 3, 99] Added "af" as possible surnames particles (this is Danish)
    possibly ignored in "search".

* Gedcom to GeneWeb (ged2gwb)
  - [Jul 5, 99] Fixed bug sometimes stopping the program (exception
    "Invalid_argument") after the detection of an error of a family whose
    parents are of bad sex (female father and male mother).
  - [Jul 2, 99] Recognizes the dates of the form "FROM..TO..".

* GeneWeb to Gedcom (gwb2ged)
  - [Jul 2, 99] Generate now dates of the form "FROM..TO.." for titles.

* Lexicon (lang/lexicon.txt) and Welcome pages (lang/*/start.txt)
  - [Jul 8, 99] Updated Swedish phrases (Stig Petersson)
  - [Jul 3, 99] Updated Danish phrases (Hans Albeck)

GeneWeb version 2.04
--------------------

* Setup program
  - [Jun 28, 99] Fixed bug: did not work for directories holding spaces.
  - [Jun 19, 99] Changed GEDCOM import menu to reflect new option "-charset"
    of "ged2gwb" (see below in section "Gedcom to GeneWeb").
  - [Jun 18, 99] Added a color combination in the provided palette
    whiteyellow, black, bluegreen and brown (thanks to Hans Albeck)

* GeneWeb Daemon/CGI (gwd)
  - [Jun 30, 99] Added the ability to enter a Sosa number in the welcome page