@@ -40,8 +40,15 @@ Select the options you want:
 <p>
 
 <dl><dt><dd><table border=1>
-<tr><td><input type=checkbox name=ascii value=on>&nbsp;&nbsp;&nbsp;</td>
-<td>Code the characters in ASCII, instead of the default ANSEL.</td> </tr>
+
+<tr><td>
+<input type=radio name=charset value=ASCII checked>&nbsp;&nbsp;&nbsp;</td>
+<td>Encode the characters in ASCII.</td> </tr>
+
+<tr><td>
+<input type=radio name=charset value=ANSEL>&nbsp;&nbsp;&nbsp;</td>
+<td>Encode the characters in ANSEL.</td> </tr>
+
 </table></dl>
 
 <dl><dt><dd><table border=1>
